# ChangeLog for sci-misc/hfst
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*hfst-3.8.3 (26 Oct 2015)

  26 Oct 2015; Flammie Pirinen <flammie@gentoo.org> +hfst-3.8.3.ebuild:
  version bump, python and licence fixes

*hfst-3.8.2 (28 May 2015)

  28 May 2015; Flammie Pirinen <flammie@gentoo.org> +hfst-3.8.2.ebuild:
  new version of hsfnew version of hsftt

  04 Mar 2015; Flammie Pirinen <flammie@gentoo.org> hfst-3.8.1.ebuild:
  add optional python support

*hfst-3.8.1 (14 Dec 2014)

  14 Dec 2014; Flammie Pirinen <flammie@gentoo.org> +hfst-3.8.1.ebuild,
  +metadata.xml:
  Initial commit