@@ -1,6 +1,10 @@
 # ChangeLog for sci-misc/hfst
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jan 2016; Flammie Pirinen <flammie@gentoo.org> -hfst-3.8.1.ebuild,
+  -hfst-3.8.2.ebuild:
+  sci-misc/hfst: remove old versions
 
 *hfst-3.8.3 (26 Oct 2015)
 
